--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -1,5 +1,10 @@
 /*! \page news What's New in MeeGo Touch
 
+\section v02042 0.20.42
+
+\subsection New
+- Pressing Ctrl+Q closes all windows.
+
 \section v02038 0.20.38
 
 \subsection New
