--- a/doc/src/credits.dox
+++ b/doc/src/credits.dox
@@ -14,6 +14,7 @@ The following people have contributed code to MeeGo Touch or otherwise helped ou
  Arsi Antila
  Ashish Gupta
  Bernd Lamecker
+ Berthold Krevert
  Bjoern Schnabel
  Bradley T. Hughes 
  Chi Ning
