Changes: Adding Paweł Łukaszewicz to credits.
RevBy: TrustMe

--- a/doc/src/credits.dox
+++ b/doc/src/credits.dox
@@ -58,6 +58,7 @@ The following people have contributed code to MeeGo Touch or otherwise helped ou
  Pankaj Saharan 
  Patrick Spendrin 
  Pavan Patale 
+ Paweł Łukaszewicz
  Pekka Vuorela
  Pertti Kellomäki
  Stefan Hundhammer
