New: Support parent style name selectors for styling.
RevBy: Armin Berres, Janne Heikkilä

Details: Adds support for parent style name selectors.
E.g.: MListItem#BlackItem MLabelStyle#CommonSingleTitle.

-Updated the functional style sheet test to support the new selectors.
-Updated the functional tests for style sheet parser for parent style name selectors.

--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -2,6 +2,9 @@
 
 \section v02043 0.20.43
 
+\subsection New
+- Parent style (object) support for css selectors. E.g.: MListItem#BlackItem MLabelStyle#CommonSingleTitle.
+
 \subsection Deprecated
 - MFeedbackPlayer, use class MFeedback instead.
 - MApplication::feedbackPlayer() and MComponentData::feedbackPlayer(), use class MFeedback instead.
