--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -5,6 +5,11 @@
 \subsection New
 - Pressing Ctrl+Q closes all windows.
 
+\subsection Deprecated
+- Some MDialog properties have been moved to MDialogStyle:
+  - MDialog::isCloseButtonVisible() and MDialog::setCloseButtonVisible(). Use MDialogStyle::hasCloseButton instead.
+  - MDialog::isTitleBarVisible() and MDialog::setTitleBarVisible(). Use MDialogStyle::hasTitleBar instead.
+
 \section v02038 0.20.38
 
 \subsection New
