Fixes: NB#187279 - Overriding the default debug level is insufficiently documented
Details: Plain Qt apps which implicitely install the custom message handler
  provided by libmeegotouch, e.g. by loading the plainqt style, can only
  override the default debug level, by setting the environment variable
  M_OUTPUT_LEVEL. This was formerly undocumented.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 libmeegotouch (0.20.42~1) unstable; urgency=low
 
   * [unreleased]
+  * Fixes: NB#187279 - Overriding the default debug level is insufficiently documented
 
  -- Jorgen Scheibengruber <jorgen.scheibengruber@nokia.com>  Fri, 10 Sep 2010 15:37:26 +0300
 
